<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/menu_new_button"
        android:icon="@drawable/baseline_add_24"
        android:title="@string/new_button"
        app:showAsAction="ifRoom"
        android:orderInCategory="2"
        />
    <item
        android:id="@+id/menu_edit_button"
        android:icon="@drawable/baseline_edit_24"
        android:title="@string/edit_button"
        app:showAsAction="ifRoom"
        android:orderInCategory="1"/>


    <item
        android:id="@+id/menu_search_button"
        android:icon="@drawable/baseline_search_24"
        android:title="@string/search_button"
        app:showAsAction="ifRoom"
        android:checkable="true"
        android:orderInCategory="4"/>




</menu>
