<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootCL"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/mediaTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/medias"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />




    <TextView
        android:id="@+id/agent_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        android:text="@string/agent"
        />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/mediaViewPager"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mediaTextView"
        app:layout_constraintBottom_toTopOf="@id/DescTitle"
        android:orientation="horizontal"/>


    <TextView
        android:id="@+id/DescTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/description"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mediaViewPager" />

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lorem"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/DescTitle"
        app:layout_constraintTop_toBottomOf="@id/DescTitle" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description"
        android:id="@+id/IconsContainer">
        <ImageView
            android:id="@+id/surface_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/description"
            android:src="@drawable/ic_surface_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/surface"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/surface"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/surface_icon"
            app:layout_constraintBottom_toBottomOf="@id/surface_icon"
            app:layout_constraintTop_toTopOf="@id/surface_icon" />

        <ImageView
            android:id="@+id/rooms_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/description"
            android:src="@drawable/ic_baseline_home_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/surface" />

        <TextView
            android:id="@+id/rooms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textSize="16sp"
            android:text="@string/number_of_rooms"
            app:layout_constraintBottom_toBottomOf="@id/rooms_icon"
            app:layout_constraintStart_toEndOf="@id/rooms_icon"
            app:layout_constraintTop_toTopOf="@id/rooms_icon" />

        <ImageView
            android:id="@+id/bathrooms_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/description"
            android:src="@drawable/ic_baseline_bathtub_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rooms_icon" />

        <TextView
            android:id="@+id/bathrooms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textSize="16sp"
            android:text="@string/number_of_bathrooms"
            app:layout_constraintBottom_toBottomOf="@id/bathrooms_icon"
            app:layout_constraintStart_toEndOf="@id/bathrooms_icon"
            app:layout_constraintTop_toTopOf="@id/bathrooms_icon" />

        <ImageView
            android:id="@+id/bedrooms_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/description"
            android:src="@drawable/ic_baseline_bedroom_parent_24"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bathrooms_icon" />

        <TextView
            android:id="@+id/bedrooms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textSize="16sp"
            android:text="@string/number_of_bedrooms"
            app:layout_constraintBottom_toBottomOf="@id/bedrooms_icon"
            app:layout_constraintStart_toEndOf="@id/bedrooms_icon"
            app:layout_constraintTop_toTopOf="@id/bedrooms_icon" />


        <ImageView
            android:id="@+id/position_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/description"
            android:src="@drawable/ic_baseline_location_on_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bedrooms_icon"/>

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:textSize="16sp"
            android:text="@string/address"
            app:layout_constraintStart_toEndOf="@id/position_icon"
            app:layout_constraintTop_toTopOf="@id/position_icon"
            app:layout_constraintBottom_toBottomOf="@id/position_icon"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintTop_toBottomOf="@id/IconsContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/map_container"
        >
        <ImageView
            android:id="@+id/static_map"
            android:clickable="true"
            android:layout_width="400dp"
            android:layout_height="400dp"
            android:contentDescription="@string/description"
            android:src="@drawable/ic_baseline_map_24"
            android:focusable="true"
            android:layout_gravity="center"/>
    </FrameLayout>

    <CheckBox
        android:id="@+id/statusCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/map_container"
        android:layout_marginTop="16dp"/>

        <Button
        android:id="@+id/editRealEstateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_button"
        android:drawableStart="@drawable/baseline_edit_24"
        android:drawablePadding="8dp"
        app:layout_constraintTop_toBottomOf="@id/map_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
